# Comattack

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  run_guardrail_attack.py  run_pref_attack.py  run_pref_attack.sh  run_qa_attack.py  run_qa_attack.sh  run_surrogate_mismatch.py  run_surrogate_mismatch.sh  run_token_retention.py
comattack/: __init__.py  data_loader.py  utils.py
comattack/analyzers/: preservation.py
comattack/attacks/: __init__.py  external_evaluator.py  extractive_context_edit.py  extractive_suffix.py  gcg_utils.py  hardcom_context_edit.py  hardcom_suffix.py  orchestration.py  softcom.py  summarize_based.py
comattack/case_studies/: case_study_cline.py  case_study_langchain_ollama.py
comattack/compressors/: __init__.py  abstractive.py  autocompressor.py  base.py  llmlingua.py  selective_context.py
comattack/defense/: __init__.py  ic_evaluator.py  llm_detector.py  secalign_evaluator.py  struq_evaluator.py
comattack/evaluation/: __init__.py  compliance.py  e2e_eval.py  inference.py  judge.py  metrics.py  pref_eval.py  qa_test.py  stealthiness.py  task_runners.py
comattack/llm/: __init__.py  autocompressor_provider.py  base.py  factory.py  (+1 more)
experiments/: __init__.py  baselines.py  behavioral_eval.py  config.py  gold_annotation.py  metrics.py  run_experiments.py
scripts/: evaluate_compliance.py  evaluate_guardrail_compliance.py  reproduce_rq1.sh  reproduce_rq2.sh  reproduce_rq3.sh  reproduce_rq4.sh  reproduce_rq5.sh  run_compliance_evaluation.sh  run_full_evaluation.py  run_guardrail_attack.sh
src/: main.py
(+131 files in other folders)
